tests/paczka1/fuzzy1/84434426.err
Error in line 1: Noya1yJ S194 76,8
Error in line 10: BOKbsX A713 35,5
Error in line 23: 6DAGZT1XHU S194 91,0
Error in line 31: gIem1t S250 18,6
Error in line 34: gIem1t S754 87,9
Error in line 39: gIem1t A713 62,32
